Set Seat Height to Prevent Collapse

--- a/client/app/styles/common/_mixins.scss
+++ b/client/app/styles/common/_mixins.scss
@@ -56,7 +56,7 @@
     align-content: center;
     display: grid;
     width: 100%;
-    height: 100%;
+    height: 7em;
     border-radius: 7em;
 }
 
